tools/tests/errors/surf_sw_07.ki
# a switch with no body at all is rejected
switch 1:
